# ifmo2k19

./: .editorconfig  .gitignore  README.md  pyproject.toml
labs/: __init__.py  base.py  constants.py  golay.py  hamming.py  huffman.py  ldpc.py  pipeline.py  reed_solomon.py
tests/: test_golay.py  test_hamming.py  test_huffman.py  test_ldpc.py
