[tool.poetry]
name = "labs"
version = "0.1.0"
description = "Лабораторные работы по современной теории информации"
authors = ["Stepanov Sergey <stalker-fc@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.17"
typing = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-cov = "^2.8"
tox = "^3.14"
mypy = "^0.740"
flake8 = "^3.7"
twine = "^2.0"


[build-system]
requires = ["poetry>=0.12", "setuptools", "wheel", "Cython", "numpy"]
build-backend = "poetry.masonry.api"
